[tool.poetry]
name = "dragcavebot"
version = "0.1.0"
description = ""
authors = ["Leo <leo.sun@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.2.3"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
